# universal-system-monitor

./: .gitignore  LICENSE  PKGBUILD  README.md  build-deb.sh  install.sh  pyproject.toml  uninstall.sh  usm.spec
.github/workflows/: build.yml
daemon/: __init__.py  config.py  desktop.py  main.py  server.py  tray.py  tray_app.py  viewer.py
daemon/actions/: __init__.py  cleanup_actions.py  cron_actions.py  docker_actions.py  network_actions.py  package_actions.py  pipewire_actions.py  power_actions.py  process_actions.py  service_actions.py  snapshot_actions.py  speedtest_actions.py  startup_actions.py
daemon/alerts/: __init__.py  engine.py  rules.py  watchdog.py
daemon/collectors/: __init__.py  battery.py  btrfs.py  cgroups.py  cleanup.py  cron.py  disks.py  docker.py  gpu.py  icons.py  network.py  packages.py  pipewire.py  processes.py  scheduler.py  security.py  services.py  startup.py  system.py  thermal.py
daemon/polkit/: cassy-monitor-helper.py  cassy-monitor-sudoers  org.cassy.monitor.policy
daemon/storage/: __init__.py  database.py
daemon/utils/: __init__.py  sudo.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ErrorBoundary.jsx  Gauge.jsx  Layout.jsx  Modal.jsx  Skeleton.jsx  Sparkline.jsx  Toast.jsx
frontend/src/hooks/: useChannel.jsx  useWebSocket.jsx
frontend/src/pages/: Alerts.jsx  Audio.jsx  Battery.jsx  Cleanup.jsx  CronJobs.jsx  Disks.jsx  Docker.jsx  GPU.jsx  Network.jsx  Overview.jsx  Packages.jsx  Processes.jsx  Scheduler.jsx  Security.jsx  Services.jsx  Snapshots.jsx  SpeedTest.jsx  Startup.jsx  Thermal.jsx
frontend/src/utils/: format.js
