[project]
name = "universal-system-monitor"
version = "0.2.0"
description = "Universal system monitor — auto-detects GPU, distro, and hardware on Linux, macOS, Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["system-monitor", "dashboard", "gpu", "docker", "cross-platform", "linux", "macos", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "pillow>=10.0",
    "psutil>=5.9",
    "pystray>=0.19",
    "pywebview>=5.0",
]

[project.optional-dependencies]
tray = ["pystray>=0.19"]

[project.urls]
Homepage = "https://github.com/sagardn/universal-system-monitor"
Repository = "https://github.com/sagardn/universal-system-monitor"
Issues = "https://github.com/sagardn/universal-system-monitor/issues"

[project.scripts]
usm = "daemon.main:main"
usm-desktop = "daemon.desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]
include = ["daemon/**", "frontend/dist/**"]
